commiting new endpoints, changed old ones and yaml updates
