# swagger.yaml
@@ -14,6 +14,17 @@ paths:
       operationId: "getPeople"
       produces:
       - "application/json"
+      parameters:
+        - in: query
+          name: sort
+          schema:
+            type: String
+          description: Either "name" or "createdAt" depending on how you want to sort
+        - in: query
+          name: reverse
+          schema:
+            type: String
+          description: "asc" if you want to sort in ascending order, nothing if you want descending
       responses:        
         200:
           description: "successful operation"
@@ -48,6 +59,27 @@ paths:
         400:
           description: "Invalid input"
   /connections:
+    get:
+      summary: "Get list of connections for a Person Id"
+      description: ""
+      operationId: "getConnections"
+      produces:
+      - "application/json"
+      parameters:
+        - in: query
+          name: from_id
+          required: true
+          schema:
+              type: Integer
+              minimum: 1
+          description: The ID of the person you want the connections for
+      responses:        
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+        400:
+          description: "Invalid input"
     post:
       summary: "Create a new connection"
       description: ""
@@ -63,6 +95,35 @@ paths:
         required: true
         schema:
           $ref: "#/definitions/Connection"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "object"
+            items:
+              $ref: "#/definitions/Connection"
+        400:
+          description: "Invalid input"
+    patch:
+      summary: "update a connection"
+      description: ""
+      operationId: "patchConnections"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "type"
+        description: "Connection type to be changed to"
+        required: true
+        schema:
+          $ref: "#/definitions/Connection"
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: Integer
       responses:
         200:
           description: "successful operation"
